@@ -2,7 +2,8 @@
 from zope.component import provideAdapter
 from zope.component import eventtesting
 
-from Products.Five import zcml
+# from Products.Five import zcml
+from Zope2.App import zcml
 from Products.Five import fiveconfigure
 
 from Products.PloneTestCase import PloneTestCase as ptc
